put in generated locations-api code
