# lib/api/swagger.yaml
@@ -1,297 +1,190 @@
 ---
 swagger: "2.0"
 info:
-  description: "Move your app forward with the Uber API"
-  version: "1.0.0"
-  title: "Uber API"
+  description: "Locate premesis API"
+  version: "2.0.0"
+  title: "Location API"
 host: "uber-api-v1.pxgsbds4pp.eu-west-1.elasticbeanstalk.com"
-basePath: "/"
+basePath: "/v2"
 schemes:
 - "http"
 produces:
 - "application/json"
 paths:
-  /products:
+  /location:
     get:
       tags:
-      - "Products"
-      summary: "Product Types"
-      description: "The Products endpoint returns information about the *Uber* products\n\
-        offered at a given location. The response includes the display name\nand other\
-        \ details about each product, and lists the products in the\nproper display\
-        \ order.\n"
-      operationId: "productsGET"
+      - "Locations"
+      summary: "Locate premesis within a certain area."
+      description: "The location endpoint returns information about premesis within\
+        \ a searched location."
+      operationId: "locationGET"
       parameters:
+      - name: "country"
+        in: "query"
+        description: "The search country."
+        required: false
+        type: "string"
+      - name: "street"
+        in: "query"
+        description: "The search street."
+        required: false
+        type: "string"
+      - name: "city"
+        in: "query"
+        description: "The search city."
+        required: false
+        type: "string"
+      - name: "postCode"
+        in: "query"
+        description: "The search postCode."
+        required: false
+        type: "string"
       - name: "latitude"
         in: "query"
-        description: "Latitude component of location."
-        required: true
+        description: "The search latitude."
+        required: false
         type: "number"
-        format: "double"
+        format: "decimal"
       - name: "longitude"
         in: "query"
-        description: "Longitude component of location."
-        required: true
-        type: "number"
-        format: "double"
-      responses:
-        200:
-          description: "An array of products"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Product"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Products"
-  /estimates/price:
-    get:
-      tags:
-      - "Estimates"
-      summary: "Price Estimates"
-      description: "The Price Estimates endpoint returns an estimated price range\n\
-        for each product offered at a given location. The price estimate is\nprovided\
-        \ as a formatted string with the full price range and the localized\ncurrency\
-        \ symbol.<br><br>The response also includes low and high estimates,\nand the\
-        \ [ISO 4217](http://en.wikipedia.org/wiki/ISO_4217) currency code for\nsituations\
-        \ requiring currency conversion. When surge is active for a particular\nproduct,\
-        \ its surge_multiplier will be greater than 1, but the price estimate\nalready\
-        \ factors in this multiplier.\n"
-      operationId: "estimatesPriceGET"
-      parameters:
-      - name: "start_latitude"
-        in: "query"
-        description: "Latitude component of start location."
-        required: true
-        type: "number"
-        format: "double"
-      - name: "start_longitude"
-        in: "query"
-        description: "Longitude component of start location."
-        required: true
-        type: "number"
-        format: "double"
-      - name: "end_latitude"
-        in: "query"
-        description: "Latitude component of end location."
-        required: true
-        type: "number"
-        format: "double"
-      - name: "end_longitude"
-        in: "query"
-        description: "Longitude component of end location."
-        required: true
-        type: "number"
-        format: "double"
-      responses:
-        200:
-          description: "An array of price estimates by product"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/PriceEstimate"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Estimates"
-  /estimates/time:
-    get:
-      tags:
-      - "Estimates"
-      summary: "Time Estimates"
-      description: "The Time Estimates endpoint returns ETAs for all products offered\
-        \ at a given location, with the responses expressed as integers in seconds.\
-        \ We recommend that this endpoint be called every minute to provide the most\
-        \ accurate, up-to-date ETAs."
-      operationId: "estimatesTimeGET"
-      parameters:
-      - name: "start_latitude"
-        in: "query"
-        description: "Latitude component of start location."
-        required: true
-        type: "number"
-        format: "double"
-      - name: "start_longitude"
-        in: "query"
-        description: "Longitude component of start location."
-        required: true
-        type: "number"
-        format: "double"
-      - name: "customer_uuid"
-        in: "query"
-        description: "Unique customer identifier to be used for experience customization."
+        description: "The search longitude."
         required: false
-        type: "string"
-        format: "uuid"
-      - name: "product_id"
+        type: "number"
+        format: "decimal"
+      - name: "geographical"
         in: "query"
-        description: "Unique identifier representing a specific product for a given\
-          \ latitude & longitude."
+        description: "If true, should return the geo-coordinates of all premesis in\
+          \ the response."
         required: false
-        type: "string"
+        type: "number"
+        format: "decimal"
+      - name: "maxDistance"
+        in: "query"
+        description: "The maximum distance to find premesis from the search location."
+        required: false
+        type: "number"
+        format: "long"
+      - name: "maxResult"
+        in: "query"
+        description: "The maximum number of premesis to find."
+        required: false
+        type: "number"
+        format: "long"
       responses:
         200:
-          description: "An array of products"
+          description: "A response"
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Product"
+            $ref: "#/definitions/SuccessResponse"
         default:
           description: "Unexpected error"
           schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Estimates"
-  /me:
-    get:
-      tags:
-      - "User"
-      summary: "User Profile"
-      description: "The User Profile endpoint returns information about the Uber user\
-        \ that has authorized with the application."
-      operationId: "meGET"
-      parameters: []
-      responses:
-        200:
-          description: "Profile information for a user"
-          schema:
-            $ref: "#/definitions/Profile"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "User"
-  /history:
-    get:
-      tags:
-      - "User"
-      summary: "User Activity"
-      description: "The User Activity endpoint returns data about a user's lifetime\
-        \ activity with Uber. The response will include pickup locations and times,\
-        \ dropoff locations and times, the distance of past requests, and information\
-        \ about which products were requested.<br><br>The history array in the response\
-        \ will have a maximum length based on the limit parameter. The response value\
-        \ count may exceed limit, therefore subsequent API requests may be necessary."
-      operationId: "historyGET"
-      parameters:
-      - name: "offset"
-        in: "query"
-        description: "Offset the list of returned results by this amount. Default\
-          \ is zero."
-        required: false
-        type: "integer"
-        format: "int32"
-      - name: "limit"
-        in: "query"
-        description: "Number of items to retrieve. Default is 5, maximum is 100."
-        required: false
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "History information for the given user"
-          schema:
-            $ref: "#/definitions/Activities"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "User"
+            $ref: "#/definitions/ErrorResponse"
+      x-swagger-router-controller: "Locations"
 definitions:
-  Product:
+  SuccessResponse:
     type: "object"
     properties:
-      product_id:
+      apiVersion:
         type: "string"
-        description: "Unique identifier representing a specific product for a given\
-          \ latitude & longitude. For example, uberX in San Francisco will have a\
-          \ different product_id than uberX in Los Angeles."
-      description:
-        type: "string"
-        description: "Description of product."
-      display_name:
-        type: "string"
-        description: "Display name of product."
-      capacity:
-        type: "string"
-        description: "Capacity of product. For example, 4 people."
-      image:
-        type: "string"
-        description: "Image URL representing the product."
-  PriceEstimate:
-    type: "object"
-    properties:
-      product_id:
-        type: "string"
-        description: "Unique identifier representing a specific product for a given\
-          \ latitude & longitude. For example, uberX in San Francisco will have a\
-          \ different product_id than uberX in Los Angeles"
-      currency_code:
-        type: "string"
-        description: "[ISO 4217](http://en.wikipedia.org/wiki/ISO_4217) currency code."
-      display_name:
-        type: "string"
-        description: "Display name of product."
-      estimate:
-        type: "string"
-        description: "Formatted string of estimate in local currency of the start\
-          \ location. Estimate could be a range, a single number (flat rate) or \"\
-          Metered\" for TAXI."
-      low_estimate:
-        type: "number"
-        description: "Lower bound of the estimated price."
-      high_estimate:
-        type: "number"
-        description: "Upper bound of the estimated price."
-      surge_multiplier:
-        type: "number"
-        description: "Expected surge multiplier. Surge is active if surge_multiplier\
-          \ is greater than 1. Price estimate already factors in the surge multiplier."
-  Profile:
-    type: "object"
-    properties:
-      first_name:
-        type: "string"
-        description: "First name of the Uber user."
-      last_name:
-        type: "string"
-        description: "Last name of the Uber user."
-      email:
-        type: "string"
-        description: "Email address of the Uber user"
-      picture:
-        type: "string"
-        description: "Image URL of the Uber user."
-      promo_code:
-        type: "string"
-        description: "Promo code of the Uber user."
-  Activity:
-    type: "object"
-    properties:
-      uuid:
-        type: "string"
-        description: "Unique identifier for the activity"
-  Activities:
-    type: "object"
-    properties:
-      offset:
-        type: "integer"
-        format: "int32"
-        description: "Position in pagination."
-      limit:
-        type: "integer"
-        format: "int32"
-        description: "Number of items to retrieve (100 max)."
-      count:
-        type: "integer"
-        format: "int32"
-        description: "Total number of items available."
-      history:
+        description: "The version of the api that generated the response."
+      data:
         type: "array"
         items:
-          $ref: "#/definitions/Activity"
+          $ref: "#/definitions/Premesis"
+  ErrorResponse:
+    type: "object"
+    properties:
+      apiVersion:
+        type: "string"
+        description: "The version of the api that generated the response."
+      error:
+        $ref: "#/definitions/Error"
+  Premesis:
+    type: "object"
+    properties:
+      parcelshopId:
+        type: "integer"
+        description: "The unique parcelshopId id of the premesis."
+      street:
+        type: "string"
+        description: "The street name of the premesis."
+      postCode:
+        type: "string"
+        description: "The postcode of the premesis."
+      city:
+        type: "string"
+        description: "The city of the premesis."
+      phoneNumber:
+        type: "string"
+        description: "The phone number of the premesis"
+      districtId:
+        type: "integer"
+        description: "The district id of the premesis."
+      name:
+        type: "string"
+        description: "The name of the premesis."
+      description:
+        type: "string"
+        description: "The description of the premesis."
+      owner:
+        type: "string"
+        description: "The owner of the premesis."
+      facilities:
+        type: "array"
+        description: "The facilities available at the premesis."
+        items:
+          type: "string"
+          enum:
+          - "suitcases"
+          - "ident"
+          - "parking"
+          - "atm"
+          - "billPayment"
+          - "lottery"
+          - "sevenDayOpening"
+          - "offLicense"
+          - "tobaccoSales"
+          - "cardPayment"
+          - "boxes"
+          - "printInStore"
+      latitude:
+        type: "integer"
+        description: "The latitude part co-ordinate of the premesis."
+      longitude:
+        type: "integer"
+        description: "The latitude part co-ordinate of the premesis."
+      salesForceId:
+        type: "string"
+        description: "The unique id of the premesis in salesForce"
+      distance:
+        type: "integer"
+        description: "The distance of the premesis relative to the search location\
+          \ origin."
+      openHours:
+        type: "array"
+        items:
+          $ref: "#/definitions/OpenHours"
+  OpenHours:
+    type: "object"
+    properties:
+      dayOfWeek:
+        type: "string"
+        description: "The day of the week."
+        enum:
+        - "Mon"
+        - "Tue"
+        - "Wed"
+        - "Thu"
+        - "Fri"
+        - "Sat"
+        - "Sun"
+      openTime:
+        type: "string"
+        description: "The time the premesis opens (24h)."
+      closedTime:
+        type: "string"
+        description: "The time the premesis closes (24h)."
   Error:
     type: "object"
     properties:
