# lib/controllers/Estimates.js
@@ -1,13 +1,0 @@
-'use strict';
-
-var url = require('url');
-
-var Estimates = require('./EstimatesService');
-
-module.exports.estimatesPriceGET = function estimatesPriceGET (req, res, next) {
-  Estimates.estimatesPriceGET(req.swagger.params, res, next);
-};
-
-module.exports.estimatesTimeGET = function estimatesTimeGET (req, res, next) {
-  Estimates.estimatesTimeGET(req.swagger.params, res, next);
-};
