# lib/controllers/Products.js
@@ -1,9 +1,0 @@
-'use strict';
-
-var url = require('url');
-
-var Products = require('./ProductsService');
-
-module.exports.productsGET = function productsGET (req, res, next) {
-  Products.productsGET(req.swagger.params, res, next);
-};
